--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,6 @@
+@import 'bulma';
+
 @import './base/settings';
 @import './base/base';
+@import './components/menu';
+@import './components/welcome';
